--- a/src/Spiffy/Spiffy.csproj
+++ b/src/Spiffy/Spiffy.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,7 +9,7 @@
     <Version>1.0.0</Version>
 
     <!-- General info -->
-    <Description>Simple data access for .NET.</Description>
+    <Description>Spiffy - Simple data access for .NET.</Description>
     <Copyright>Copyright 2020 Pim Brouwers</Copyright>
     <Authors>Pim Brouwers</Authors>
     <NeutralLanguage>en-CA</NeutralLanguage>
@@ -24,8 +24,8 @@
 
     <!-- NuGet config -->
     <PackageId>Spiffy</PackageId>
-    <PackageVersion>1.0.0</PackageVersion>
-    <PackageTags>database;sql;ado;adonet;data access;repository;dapper</PackageTags>
+    <PackageVersion>1.1.0</PackageVersion>
+    <PackageTags>database;sql;ado;adonet;data access;repository;dapper;async;sql server;sqlite</PackageTags>
     <PackageProjectUrl>https://github.com/pimbrouwers/Spiffy</PackageProjectUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
