--- a/src/Spiffy/Spiffy.csproj
+++ b/src/Spiffy/Spiffy.csproj
@@ -1,41 +1,46 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
   <PropertyGroup>
     <AssemblyName>Spiffy</AssemblyName>
-    <Version>1.0.0</Version>
+    <RootNamespace>Spiffy</RootNamespace>
+    <Version>3.1.4</Version>
+    <CurrentYear>$([System.DateTime]::Now.ToString(yyyy))</CurrentYear>
 
-    <!-- General info -->
-    <Description>Spiffy - Simple data access for .NET.</Description>
-    <Copyright>Copyright 2020 Pim Brouwers</Copyright>
-    <Authors>Pim Brouwers</Authors>
+    <!-- General Info-->
+    <Product>Spiffy</Product>
+    <Description>C# data access you'll love.</Description>
+    <Copyright>Copyright $(CurrentYear) NHLPA</Copyright>
+    <Authors>NHLPA Engineering</Authors>
     <NeutralLanguage>en-CA</NeutralLanguage>
 
-    <!-- Build config -->
+    <!-- Build Config -->
+    <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>portable</DebugType>
     <OutputType>Library</OutputType>
-    <!--<TreatWarningsAsErrors>true</TreatWarningsAsErrors>-->
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <IncludeSymbols>true</IncludeSymbols>
 
     <!-- NuGet config -->
     <PackageId>Spiffy</PackageId>
-    <PackageVersion>3.1.3</PackageVersion>
     <PackageTags>database;sql;ado;adonet;data access;repository;dapper;async;sql server;sqlite</PackageTags>
-    <PackageProjectUrl>https://github.com/pimbrouwers/Spiffy</PackageProjectUrl>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/nhlpa/Spiffy</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/pimbrouwers/Spiffy</RepositoryUrl>
+    <RepositoryUrl>https://github.com/nhlpa/Spiffy</RepositoryUrl>
 
     <!-- SourceLink settings -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="DbCommandBuilder.cs" />
@@ -48,4 +53,12 @@
     <Compile Include="IDbTransactionExtensions.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="../../assets/icon.png">
+      <Pack>true</Pack>
+      <PackagePath>$(PackageIconUrl)</PackagePath>
+    </None>
+
+    <None Include="../../README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 </Project>
