test project reference fix

--- a/test/Spiffy.Tests/Spiffy.Tests.csproj
+++ b/test/Spiffy.Tests/Spiffy.Tests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Spiffy\Spiffy.csproj" />
+    <ProjectReference Include="..\..\src\Spiffy\Spiffy.csproj" />
   </ItemGroup>
 
 </Project>
