--- a/src/Spiffy/Spiffy.csproj
+++ b/src/Spiffy/Spiffy.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <AssemblyName>Spiffy</AssemblyName>
     <RootNamespace>Spiffy</RootNamespace>
-    <Version>4.0.0</Version>
+    <Version>5.0.0</Version>
     <CurrentYear>$([System.DateTime]::Now.ToString(yyyy))</CurrentYear>
 
     <!-- General Info-->
@@ -13,7 +13,9 @@
     <NeutralLanguage>en-CA</NeutralLanguage>
 
     <!-- Build Config -->
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
     <DebugType>portable</DebugType>
     <OutputType>Library</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
